# comfyui-3d-gs-renderer

./: LICENSE  README.md  __init__.py  package-lock.json  package.json  pyproject.toml  rollup.config.js
src/: index.html
src/js/: index.js  main.js
